--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "react": "^16.12.0",
     "react-app-polyfill": "^1.0.4",
     "react-dev-utils": "^9.1.0",
+    "react-dnd": "^9.5.1",
+    "react-dnd-html5-backend": "^9.5.1",
     "react-dom": "^16.12.0",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
