--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "deploy": "yarn build && gh-pages -d build",
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
@@ -84,8 +85,10 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^4.13.0"
+    "node-sass": "^4.13.0",
+    "serve": "^11.2.0"
   },
+  "homepage": "http://winyh.github.io/astx",
   "jest": {
     "roots": [
       "<rootDir>/src"
